--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "@types/react-dom": "^18.0.11",
     "eslint": "^8.38.0",
     "typescript": "^5.0.4"
+  },
+  "engines":{
+    "node":"<=18.16.0"
   }
 }
